<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="P_Temperatures" Id="{371bfb6b-931a-46fc-b88f-f5fad139d928}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM P_Temperatures
VAR
	rTempKeuken: REAL;
	rTempLiving: REAL;
	rTempBoiler: REAL;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[rTempBoiler := INT_TO_REAL(iTemp6) / 100;
rTempLiving := INT_TO_REAL(iTemp7) / 100;
rTempKeuken := INT_TO_REAL(iTemp8) / 100;]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>